# inspect-examples

./: .gitignore  CHANGELOG.md  IMPORTANT.md  PLAN.md  QUICKSTART.md  README.md  example_commands.sh  pyproject.toml  run_comparison.sh  setup_with_uv.sh
examples/browser/: README.md  __init__.py  browser.py  compose-vnc.yaml
examples/compare_llms/: compare_llms.py
examples/custom_scorer/: DESIGN.md  FLOW.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  __init__.py  custom_scorer.py  diagnose.py  example_commands.sh  inspect_eval.sh  ragchecker_scorer.py  run_evaluation.py  run_evaluation.sh  test_setup.py
examples/think_tool/: README.md  TROUBLESHOOTING.md  compare_llms_with_think.py  compose.yaml  gaia_eval.py  get_dataset_row_count.py  logs_data.csv  report_logs.py
