[project]
name = "inspect-examples"
version = "0.1.0"
description = "Examples of using Inspect AI framework for LLM evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
    "inspect_evals @ git+https://github.com/UKGovernmentBEIS/inspect_evals.git",
    "plotnine",
    "openai>=1.99.7",
    "mistralai>=1.0.0",
    "anthropic>=0.69.0",
    "requests>=2.32.5",
    "click>=8.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.69.0"]
mistral = ["mistralai>=1.0.0"]
ai21 = ["ai21>=2.0.0"]
google = ["google-genai>=0.2.0"]
gcloud = [
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-logging>=3.5.0",
]
all-providers = [
    "openai>=1.99.7",
    "anthropic>=0.69.0",
    "mistralai>=1.0.0",
    "ai21>=2.0.0",
    "google-genai>=0.2.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["examples"]

